# internal/controllers/todo_handler.go
@@ -1,9 +1,12 @@
 package controllers
 
 import (
+	"errors"
 	"strconv"
 	"todo-app-mongo/internal/database"
+	"todo-app-mongo/internal/models"
 	"todo-app-mongo/internal/models/dtos"
+	"todo-app-mongo/internal/utils"
 
 	"github.com/gin-gonic/gin"
 )
@@ -18,10 +21,11 @@ type TodoHandlerInterface interface {
 
 type todoHandler struct {
 	todoDAO database.TodoDAOInterface
+	userDAO database.UserDAOInterface
 }
 
-func NewTodoHandler(todoDAO database.TodoDAOInterface) TodoHandlerInterface {
-	return &todoHandler{todoDAO: todoDAO}
+func NewTodoHandler(todoDAO database.TodoDAOInterface, userDAO database.UserDAOInterface) TodoHandlerInterface {
+	return &todoHandler{todoDAO: todoDAO, userDAO: userDAO}
 }
 
 // @Summary Create a new todo
@@ -31,18 +35,27 @@ func NewTodoHandler(todoDAO database.TodoDAOInterface) TodoHandlerInterface {
 // @Produce json
 // @Param todo body dtos.TodoDTO true "Todo object"
 // @Success 201 {object} models.Todo
+// @Failure 400 {object} utils.ErrorHandler
 // @Router /todo [post]
 func (t *todoHandler) Create(c *gin.Context) {
 
+	user, err := t.getUserFromContext(c)
+	if err != nil {
+		utils.DefaultErrorResponse(c, 500, "Error getting user")
+		return
+	}
+
 	var todoDTO dtos.TodoDTO
 	if err := c.ShouldBindJSON(&todoDTO); err != nil {
-		c.JSON(400, gin.H{"error": err.Error()})
+		utils.DefaultErrorResponse(c, 400, "Invalid request body")
 		return
 	}
 
 	todo := todoDTO.ToModel()
+	todo.UserID = user.ID
+
 	if err := t.todoDAO.Create(c, todo); err != nil {
-		c.JSON(500, gin.H{"error": err.Error()})
+		utils.DefaultErrorResponse(c, 500, "Error creating todo")
 		return
 	}
 
@@ -57,13 +70,20 @@ func (t *todoHandler) Create(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Todo ID"
 // @Success 200 {object} models.Todo
+// @Failure 500 {object} utils.ErrorHandler
 // @Router /todo/{id} [get]
 func (t *todoHandler) Get(c *gin.Context) {
 
-	id := c.Param("id")
-	todo, err := t.todoDAO.Get(c, id)
+	user, err := t.getUserFromContext(c)
 	if err != nil {
-		c.JSON(500, gin.H{"error": err.Error()})
+		utils.DefaultErrorResponse(c, 500, "Error getting user")
+		return
+	}
+
+	id := c.Param("id")
+	todo, err := t.todoDAO.Get(c, id, user.ID.String())
+	if err != nil {
+		utils.DefaultErrorResponse(c, 500, "Error getting todo")
 		return
 	}
 
@@ -76,6 +96,7 @@ func (t *todoHandler) Get(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Success 200 {array} models.Todo
+// @Failure 500 {object} utils.ErrorHandler
 // @Router /todos [get]
 // @Param limit query int false "Limit" default(10)
 // @Param offset query int false "Offset" default(0)
@@ -106,7 +127,7 @@ func (t *todoHandler) GetAll(c *gin.Context) {
 
 	todos, count, err := t.todoDAO.GetAll(c, limit, offset, search)
 	if err != nil {
-		c.JSON(500, gin.H{"error": err.Error()})
+		utils.DefaultErrorResponse(c, 500, "Error getting todos")
 		return
 	}
 
@@ -122,19 +143,20 @@ func (t *todoHandler) GetAll(c *gin.Context) {
 // @Param id path string true "Todo ID"
 // @Param todo body dtos.TodoDTO true "Todo object"
 // @Success 204 {object} models.Todo
+// @Failure 500 {object} utils.ErrorHandler
 // @Router /todo/{id} [put]
 func (t *todoHandler) Update(c *gin.Context) {
 
 	id := c.Param("id")
 	var todoDTO dtos.TodoDTO
 	if err := c.ShouldBindJSON(&todoDTO); err != nil {
-		c.JSON(400, gin.H{"error": err.Error()})
+		utils.DefaultErrorResponse(c, 400, "Invalid request body")
 		return
 	}
 
 	todo := todoDTO.ToModel()
 	if err := t.todoDAO.Update(c, id, todo); err != nil {
-		c.JSON(500, gin.H{"error": err.Error()})
+		utils.DefaultErrorResponse(c, 500, "Error updating todo")
 		return
 	}
 
@@ -147,14 +169,25 @@ func (t *todoHandler) Update(c *gin.Context) {
 // @Accept json
 // @Param id path string true "Todo ID"
 // @Success 204
+// @Failure 500 {object} utils.ErrorHandler
 // @Router /todo/{id} [delete]
 func (t *todoHandler) Delete(c *gin.Context) {
 
 	id := c.Param("id")
 	if err := t.todoDAO.Delete(c, id); err != nil {
-		c.JSON(500, gin.H{"error": err.Error()})
+		utils.DefaultErrorResponse(c, 500, "Error deleting todo")
 		return
 	}
 
 	c.JSON(204, nil)
+}
+
+func (t *todoHandler) getUserFromContext(c *gin.Context) (*models.User, error) {
+
+	user, err := t.userDAO.GetByEmail(c, c.GetString("email"))
+	if err != nil {
+		return nil, errors.New("error getting user")
+	}
+
+	return user, nil
 }
